--- a/6.4/ansible/templates/deliver.vcl.j2
+++ b/6.4/ansible/templates/deliver.vcl.j2
@@ -24,4 +24,6 @@ sub vcl_deliver {
 
   // Pass the TTL header.
   set resp.http.X-Varnish-Ttl = req.http.X-Varnish-Ttl;
+
+  set resp.http.X-Varnish-Ttl = req.http.X-Cacheable;
 }
