--- a/src/ansible/templates/varnish-foreground.sh.j2
+++ b/src/ansible/templates/varnish-foreground.sh.j2
@@ -10,6 +10,6 @@ varnishd -F \
   -T :{% if flightdeck_varnish.controlPort is defined %}{{ flightdeck_varnish.controlPort }}{% else %}{{ lookup('env', 'VARNISH_CONTROL_PORT') | default('6082', true) }}{% endif %} \
   -f {{ flightdeck_varnish.vclPath | default('/etc/varnish/default.vcl') }} \
   -S {% if flightdeck_varnish.secretFile is defined %}{{ flightdeck_varnish.secretFile }}{% else %}/etc/varnish/secret{% endif %} \
-  -s malloc,{% if flightdeck_varnish.memSize is defined %}{{ flightdeck_varnish.memSize }}{% else %}{{ lookup('env', 'VARNISH_MEMORY_SIZE') | default('256m', true)}}{% endif %} \
-  -s secondary=file,{{ flightdeck_varnish.storageFile | default('/var/lib/varnish/storage.bin') }},{{ flightdeck_varnish.storageSize | default('1024m') }}
+  -s malloc,{% if flightdeck_varnish.memSize is defined %}{{ flightdeck_varnish.memSize }}{% else %}{{ lookup('env', 'VARNISH_MEMORY_SIZE') | default('256m', true)}}{% endif %}{% if (flightdeck_varnish.storageEnabled | default(false) | bool == true) %} \
+  -s secondary=file,{{ flightdeck_varnish.storageFile | default(flightdeck_varnish_defaults.storageFile) }},{{ flightdeck_varnish.storageSize | default(flightdeck_varnish_defaults.storageSize) }}{% endif %}
 
